Reverted theme files to original code in prep to move customizations to the variables scss file; Fixed header gap and content shift

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -19,7 +19,7 @@ body {
 
 body.fixed-top-nav {
   // Add some padding for the nav-bar.
-  padding-top: 20px;
+  padding-top: 56px;
 }
 
 body.sticky-bottom-footer {
@@ -37,8 +37,6 @@ body.sticky-bottom-footer {
     width: 100%;
   }
 }
-
-
 
 // TODO: redefine content layout.
 
